feat : sonar fixes