@@ -3,13 +3,12 @@ package com.example.locks.mapper;
 import com.example.locks.entities.Actor;
 import com.example.locks.entities.Genre;
 import com.example.locks.entities.Movie;
-import com.example.locks.entities.Review;
+import com.example.locks.entities.Reviews;
 import com.example.locks.model.request.ActorRequest;
 import com.example.locks.model.request.MovieRequest;
 import com.example.locks.model.response.ActorResponse;
 import com.example.locks.model.response.MovieResponse;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.MappingTarget;
@@ -23,7 +22,7 @@ public interface JpaLocksMapper {
     default Movie movieRequestToMovieEntity(MovieRequest movieRequest) {
         var movie = movieRequestToMovie(movieRequest);
         for (Actor a : movie.getActors()) a.setMovies(List.of(movie));
-        for (Review r : movie.getReviews()) r.setMovie(movie);
+        for (Reviews r : movie.getReviews()) r.setMovie(movie);
         for (Genre g : movie.getGenres()) g.setMovies(List.of(movie));
         return movie;
     }
@@ -33,7 +32,7 @@ public interface JpaLocksMapper {
     MovieResponse movieToMovieResponse(Movie movie);
 
     default List<MovieResponse> moviesListToMovieResponseList(List<Movie> moviesList) {
-        return moviesList.stream().map(this::movieToMovieResponse).collect(Collectors.toList());
+        return moviesList.stream().map(this::movieToMovieResponse).toList();
     }
 
     ActorResponse actorToActorResponse(Actor actor);
